<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyledButtonSmaller"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/contact_make_a_reservation"
    />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyledButtonSmaller"
        app:layout_constraintTop_toBottomOf="@id/btn_reservation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/contact_email"
    />

    <TextView
        android:id="@+id/tv_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyledText"
        app:layout_constraintTop_toBottomOf="@id/btn_contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/contact_open_information"
    />

    <TextView
        android:id="@+id/tv_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyledText"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_open"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/contact_address_label"/>

    <Button
        android:id="@+id/btn_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyledButtonSmaller"
        app:layout_constraintTop_toBottomOf="@id/tv_address_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/contact_address_value"/>

    <Button
        android:id="@+id/btn_open_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyledButtonSmaller"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_open_map"
    />


    <FrameLayout
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_address"
        app:layout_constraintBottom_toTopOf="@id/btn_open_map">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>