<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <Button
        android:id="@+id/btn_about"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_cats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cats"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_fluffy_friends"
        app:layout_constraintBottom_toTopOf="@+id/btn_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about" />

    <Button
        android:id="@+id/btn_contact"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        app:layout_constraintBottom_toTopOf="@+id/btn_game1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cats" />

    <Button
        android:id="@+id/btn_game1"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_find_cat"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_game2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contact" />

    <Button
        android:id="@+id/btn_game2"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_snake"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_game1" />

    <Button
        android:id="@+id/btn_share"
        style="@style/StyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_game2" />

</android.support.constraint.ConstraintLayout>